# swagger/swagger.json
@@ -636,6 +636,24 @@
             "description": "Erro interno"
           }
         }
+      },
+      "delete": {
+        "tags": ["User/Comment"],
+        "summary": "Permite ao utilizador eliminar uma das suas moradas",
+        "responses": {
+          "204": {
+            "description": "Moradas eliminada com sucesso"
+          }, 
+          "400": {
+            "description": "Morada não encontrada ou já foi removida"
+          },
+          "404": {
+            "description": "Utilizador não encontrado ou não tem moradas"
+          },
+          "500": {
+            "description": "Erro interno"
+          }
+        }
       }
     },
     "/user/{userId}/addresses": {
@@ -899,7 +917,6 @@
         }
       }
     }
-
   },
   "definitions": {
     "Address": {
